--- a/config/nginx_ertc.conf
+++ b/config/nginx_ertc.conf
@@ -1,8 +1,13 @@
 server {
+    server_name pyclt.hackingthought.com
     listen 80;
-    server_name pyclt.hackingthought.com;
+    listen 443 default ssl;
+    ssl on;
+    ssl_certificate /var/ertc/server.crt;
+    ssl_certificate_key /var/ertc/server.key;
     location / {
         proxy_pass http://127.0.0.1:5000;
-        proxy_set_header  X-Real-IP $remote_addr;
+        proxy_set_header  X-Real-IP  $remote_addr;
     }
 }
+
