--- a/config/super_ertc.conf
+++ b/config/super_ertc.conf
@@ -1,6 +1,7 @@
 [program:ertc]
 command=/var/ertc/env/bin/python /var/ertc/ertc/ertc.py
 user=lj
-directory=/var/ertc/ertc # Directory to cd before starting process
-startsecs=3 # 1 is default VMs might be a bit slow
+directory=/var/ertc/ertc 
+startsecs=3 
+environment=PYTHONPATH=".:/var/ertc/ertc"
 
