Fix 80 and 443 port listening

--- a/config/nginx_ertc.conf
+++ b/config/nginx_ertc.conf
@@ -1,6 +1,14 @@
 server {
-    server_name pyclt.hackingthought.com
+    server_name pyclt1.hackingthought.com pyclt2.hackingthought.com;
     listen 80;
+    location / {
+        proxy_pass http://127.0.0.1:5000;
+        proxy_set_header  X-Real-IP  $remote_addr;
+    }
+}
+
+server {
+    server_name pyclt.hackingthought.com;
     listen 443 default ssl;
     ssl on;
     ssl_certificate /var/ertc/server.crt;
@@ -10,4 +18,3 @@ server {
         proxy_set_header  X-Real-IP  $remote_addr;
     }
 }
-
